--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+   <img
+   src="
+   https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+   alt="The King of the jungle"
+   title="THE LION" 
+   />
   </body>
 </html>
